# CKB-Progress-Documentation

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
Month-1/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
Month-1/week-1/: README.md  balance.ts  run-ckb-services.sh  sendCKB.ts  wallet.ts
Month-1/week-2/: README.md  run-fiber-node.sh
Month-1/week-2/fiber/: client.ts  closeChannel.ts  getNodeInfo.ts  listChannels.ts  openChannel.ts  types.ts
Month-1/week-3/: README.md
Month-1/week-3/fiber/: abandonChannel.ts  acceptChannel.ts  cancelInvoice.ts  connectPeer.ts  disconnectPeer.ts  getInvoice.ts  getPayment.ts  listPeer.ts  newInvoice.ts  parseInvoice.ts  sendPayment.ts  settleInvoice.ts  shutDownChannel.ts
Month-2/: README.md
Month-2/week-4/: README.md  localStorage.ts  manifest.json  package.json  password.ts  pnpm-lock.yaml  popup.html  popup.js  privKey.ts  styles.css  tsconfig.json
Month-2/week-4/src/: ckb.ts  (+7 more)
Month-2/week-5/: README.md  ckblinks.html  styles.css
Month-2/week-6/: README.md
Month-2/week-7/: README.md  deployedContract.json  get_transaction.json
Month-3/: README.md
Month-3/week-10/: README.md
Month-3/week-11/: README.md
Month-3/week-8/: README.md
Month-3/week-9/: README.md
Month-3/week-9/sporebadges/contracts/badges/: Cargo.toml  README.md
Month-3/week-9/sporebadges/contracts/badges/src/: issuer.rs  lib.rs  main.rs  types.rs  validation.rs
Month-3/week-9/sporebadges/native-simulators/badges-sim/: Cargo.toml  README.md
Month-3/week-9/sporebadges/native-simulators/badges-sim/src/: lib.rs
(+47 files in other folders)
